schroot (1.4.24-1) unstable; urgency=low

  * New upstream stable release.

 -- Roger Leigh <rleigh@debian.org>  Mon, 11 Jul 2011 12:28:31 +0100

schroot (1.4.23-1) unstable; urgency=low

  * New upstream stable release.
  * schroot: Breaks sbuild (<< 0.62.4-1) due to requirement for
    /var/lib/sbuild/build to exist when using the sbuild or
    buildd profiles.  /var/lib/sbuild/build is bind mounted on
    /build in the build chroot.

 -- Roger Leigh <rleigh@debian.org>  Fri, 24 Jun 2011 23:30:01 +0100

schroot (1.4.22-1) unstable; urgency=low

  * New upstream stable release.
  * Large file support is enabled by default.  This enables the use
    of files over 2 GiB in size on 32 bit architectures
    (Closes: #619825).
  * dchroot-dsa: Use current interface for loading dchroot.conf,
    rather than the old, which caused a fatal exception
    (Closes: #626503).
  * schroot: Don't use rbind when mounting filesystems in the chroot
    (Closes: #622756).  Recursive bind mounting of /proc, /dev and
    /sys caused breakage with systemd due to its use of autofs mounts.
    autofs interacts badly with bind mounting, leading to unmountable
    mount points.  While rbind is still possible, it is not done by
    default, and instead only specific filesystems are mounted;
    additional mounts required must be added to the profile fstab file.
  * man: Add missing newline for run-exec-scripts (Closes: #624303).
    Fix incorrectly terminated underlining of /proc (Closes: #624302).
    Also document the chroot types implementing specific additional
    options (Closes: #626221).  Thanks to Marc Haber and Brian May.
  * Session metadata includes the original chroot name.  This is
    available in the user environment as SCHROOT_CHROOT_NAME and
    in the setup scripts as CHROOT_NAME (Closes: #623828).
  * Include buildd profile.  This was previously included in the buildd
    and sbuild packages, but was not built for the specific host