@@ -1,1 +1,0 @@
-debian/install/usr/lib/libsbuild.so.*        usr/lib
