@@ -1,8 +1,10 @@
 schroot (1.4.24-1) unstable; urgency=low
 
   * New upstream stable release.
+  * Add multiarch support.
+  * Use debhelper 8.1 and dh using compat level 9.
 
- -- Roger Leigh <rleigh@debian.org>  Mon, 11 Jul 2011 12:28:31 +0100
+ -- Roger Leigh <rleigh@debian.org>  Mon, 11 Jul 2011 13:10:43 +0100
 
 schroot (1.4.23-1) unstable; urgency=low
 
